--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     },
     "dependencies": {
         "@apollo/client": "^3.11.8",
-        "@hookform/resolvers": "^2.9.10",
+        "@charkour/react-reactions": "^0.11.0",
+        "@hookform/resolvers": "^2.9.11",
         "@reduxjs/toolkit": "^1.9.1",
         "@tailwindcss/line-clamp": "^0.4.4",
+        "apollo-cache-persist": "^0.1.1",
         "axios": "^1.2.5",
         "framer-motion": "^10.12.12",
         "graphql": "^16.9.0",
@@ -24,12 +26,15 @@
         "react-dom": "^18.2.0",
         "react-hook-form": "^7.42.1",
         "react-icons": "^4.11.0",
+        "react-reactions": "^0.1.3",
         "react-redux": "^8.0.5",
         "react-router-dom": "^6.6.1",
         "redux-persist": "^6.0.0",
-        "tailwind-merge": "^1.14.0"
+        "tailwind-merge": "^1.14.0",
+        "zod": "^3.23.8"
     },
     "devDependencies": {
+        "@tailwindcss/typography": "^0.5.15",
         "@types/leaflet": "^1.9.3",
         "@types/node": "^18.11.18",
         "@types/react": "^18.0.28",
