--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
         "./src/*"
       ],
     },
-    "target": "ES2015",
+    "target": "es2017",
     "useDefineForClassFields": true,
     "lib": [
       "DOM",
